--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.1.4",
     "babel-plugin-import": "^1.6.3",
+    "express-generator": "^4.15.5",
     "react": "^16.2.0",
     "react-app-rewire-less": "^2.1.0",
     "react-app-rewired": "^1.4.0",
