--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.1.4",
     "babel-plugin-import": "^1.6.3",
     "express-generator": "^4.15.5",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.2.0",
     "react-app-rewire-less": "^2.1.0",
     "react-app-rewired": "^1.4.0",
@@ -14,6 +15,14 @@
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
+  },
+  "homepage": "./",
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:3002",
+      "secure": false,
+      "changeOrigin": true
+    }
   },
   "scripts": {
     "start": "react-app-rewired start",
