--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.0.2",
     "morgan": "~1.9.0",
     "node-dev": "^3.1.3",
+    "nodemon": "^1.14.11",
     "serve-favicon": "~2.4.5"
   }
 }
